parser/tests/parser/complex/invalid/basic_3.mf2
.foo {:hello} {foo} {bar}
{{}}
=== spans ===
                    .foo {:hello} {foo} {bar}↵{{}}
ComplexMessage      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 0:0-1:4
QuotedPattern                                 ^^^^ 1:0-1:4
Pattern                                            0:0-0:0
=== diagnostics ===
Found a statement that is invalid because the keyword 'foo' is keyword. (at @0..25)
  .foo {:hello} {foo} {bar}↵{{}}
  ^^^^^^^^^^^^^^^^^^^^^^^^^
=== ast ===
ComplexMessage {
    span: @0..30,
    declarations: [],
    body: QuotedPattern {
        span: @26..30,
        pattern: Pattern {
            parts: [],
        },
    },
}